// Copyright 2018 Google LLC
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';
package api;
option go_package = "internal/pb";

// The protobuf messages sent in the gRPC calls are defined 'messages.proto'.
import 'api/protobuf-spec/messages.proto';
import 'google/api/annotations.proto';

message CreateMatchRequest {
  messages.MatchObject match = 1;
}

message CreateMatchResponse {
  messages.MatchObject match = 1;
}

message ListMatchesRequest {
  messages.MatchObject match = 1;
}

message ListMatchesResponse {
  messages.MatchObject match = 1;
}

message DeleteMatchRequest {
  messages.MatchObject match = 1;
}

message DeleteMatchResponse {
}

message CreateAssignmentsRequest {
  messages.Assignments assignment = 1;
}

message CreateAssignmentsResponse {
}

message DeleteAssignmentsRequest {
  messages.Roster roster = 1;
}

message DeleteAssignmentsResponse {
}

service Backend {
  // Calls to ask the matchmaker to run a matchmaking function.

  // Run MMF once.  Return a matchobject that fits this profile.
  // INPUT: MatchObject message with these fields populated:
  //  - id
  //  - properties
  //  - [optional] roster, any fields you fill are available to your MMF.
  //  - [optional] pools, any fields you fill are available to your MMF.
  // OUTPUT: MatchObject message with these fields populated:
  //  - id
  //  - properties
  //  - error. Empty if no error was encountered
  //  - rosters, if you choose to fill them in your MMF. (Recommended)
  //  - pools, if you used the MMLogicAPI in your MMF. (Recommended, and provides stats)
  rpc CreateMatch(CreateMatchRequest) returns (CreateMatchResponse) {
    option (google.api.http) = {
      put: "/v1/backend/matches"
      body: "*"
    };
  } 
  // Continually run MMF and stream MatchObjects that fit this profile until
  // the backend client closes the connection.  Same inputs/outputs as CreateMatch.
  rpc ListMatches(ListMatchesRequest) returns (stream ListMatchesResponse) {
    option (google.api.http).get = "/v1/backend/matches/{match.id}/{match.properties}";
  }

  // Delete a MatchObject from state storage manually. (MatchObjects in state
  // storage will also automatically expire after a while, defined in the config)
  // INPUT: MatchObject message with the 'id' field populated. 
  // (All other fields are ignored.)
  rpc DeleteMatch(DeleteMatchRequest) returns (DeleteMatchResponse) {
    option (google.api.http) = {
      delete: "/v1/backend/matches"
      body: "*"
      additional_bindings {
        delete: "/v1/backend/matches/{match.id}"
      }
    };
  }

  // Calls for communication of connection info to players. 

  // Write the connection info for the list of players in the
  // Assignments.messages.Rosters to state storage.  The Frontend API is
  // responsible for sending anything sent here to the game clients.
  // Sending a player to this function kicks off a process that removes
  // the player from future matchmaking functions by adding them to the 
  // 'deindexed' player list and then deleting their player ID from state storage
  // indexes.
  // INPUT: Assignments message with these fields populated:
  //  - assignment, anything you write to this string is sent to Frontend API 
  //  - rosters. You can send any number of rosters, containing any number of
  //     player messages. All players from all rosters will be sent the assignment.
  //     The only field in the Roster's Player messages used by CreateAssignments is
  //     the id field.  All other fields in the Player messages are silently ignored.
  rpc CreateAssignments(CreateAssignmentsRequest) returns (CreateAssignmentsResponse) {
    option (google.api.http)= {
      put: "/v1/backend/assignments"
      body: "*"
    };
  }
  // Remove DGS connection info from state storage for players. 
  // INPUT: Roster message with the 'players' field populated. 
  //    The only field in the Roster's Player messages used by
  //    DeleteAssignments is the 'id' field.  All others are silently ignored.  If
  //    you need to delete multiple rosters, make multiple calls.
  rpc DeleteAssignments(DeleteAssignmentsRequest) returns (DeleteAssignmentsResponse) {
    option (google.api.http) = {
      delete: "/v1/backend/assignments"
      body: "*"
      additional_bindings {
        delete: "/v1/backend/assignments"
      }
    };
  }
}
