// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package api;
option go_package = "pkg/pb";

import "api/matchfunction.proto";
import "api/messages.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/struct.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Simple Match Function"
    version: "1.0"
    contact: {
      name: "Open Match"
      url: "https://open-match.dev"
      email: "open-match-discuss@googlegroups.com"
    }
    license: {
      name: "Apache 2.0 License"
      url: "https://github.com/googleforgames/open-match/blob/master/LICENSE"
    }
  }
  external_docs: {
    url: "https://open-match.dev/site/docs/"
    description: "Open Match Documentation"
  }
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
  responses: {
    key: "404"
    value: {
      description: "Returned when the resource does not exist."
      schema: { json_schema: { type: STRING } }
    }
  }
  // TODO Add annotations for security_defintiions.
  // See
  // https://github.com/grpc-ecosystem/grpc-gateway/blob/master/examples/proto/examplepb/a_bit_of_everything.proto
};

message TicketList {
  repeated Ticket tickets = 1;
}

message SimpleRunRequest {
  string profile_name = 1;
  // Properties contains custom info about the ticket.  Top level values can be
  // used in indexing and filtering to find tickets.
  google.protobuf.Struct properties = 2;

  // Set of Rosters for this match request. Could be empty Rosters used to
  // indicate the composition of the generated Match or they could be partially
  // pre-populated Ticket list to be used in scenarios such as backfill / join
  // in progress.
  repeated Roster roster = 3;
  map<string, TicketList> pool_name_to_tickets = 4;
}

// This proto defines the API for running Match Functions as long-lived,
// 'serving' functions.
service SimpleMatchFunction {
  // This is the function that is executed when by the Open Match backend to
  // generate Match proposals.
  rpc SimpleRun(SimpleRunRequest) returns (RunResponse) {
    option (google.api.http) = {
      post: "/v1/simplematchfunction:run"
      body: "*"
    };
  }
}
